k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: comments
          image: nishu02/blog_app_1:posts-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: comments
          image: nishu02/blog_app_1:event-bus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comments
          image: nishu02/blog_app_1:comment-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: comments
          image: nishu02/blog_app_1:query-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: comments
          image: nishu02/blog_app_1:moderation-service
---
