k8s/Nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-node-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: client-ui-node-srv
spec:
  type: NodePort
  selector:
    app: client-ui
  ports:
    - name: client-ui
      protocol: TCP
      port: 3000
      targetPort: 3000
